# gemstone-daw

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  notes-vibrato-resynth-spec.md
.cargo/: config.toml
src/: lib.rs  main.rs  track_format.rs
src/analysis/: mod.rs  segmentation.rs
src/audio/: decode.rs  engine.rs  mod.rs
src/gui/: app.rs  mod.rs  resynth.rs  track.rs
src/gui/editor_window/: fallback.rs  mod.rs  windows.rs  x11.rs
src/midi/: input.rs  mod.rs
src/vst/: event_list.rs  handler.rs  host.rs  mod.rs
tests/: resynth_d5.rs
