[package]
name = "gemstone-daw"
version = "0.1.0"
edition = "2021"
authors = ["Jakub Hlavnicka <hlavnickajakub@gmail.com>"]
license = "Apache-2.0"
description = "A Rust DAW (egui/eframe) that hosts VST3 plugins and resynthesizes arbitrary audio through an embedded LeSynth Fourier additive synth."
readme = "README.md"
keywords = ["daw", "vst3", "audio", "synthesizer", "resynthesis"]
categories = ["multimedia::audio"]

[dependencies]
# VST3 hosting
vst3 = "0.1.0"
libloading = "0.7"

# Audio I/O
cpal = "0.15.3"

# MIDI
midir = "0.9"

# Audio file decoding (.wav / .mp3) for the resynthesis feature — pure Rust.
symphonia = { version = "0.5", default-features = false, features = ["mp3", "wav", "pcm", "isomp4", "aac", "alac"] }

# GUI
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
egui = "0.31"

# Native file-open dialog. Force the GTK3 backend on Linux — the default
# xdg-portal backend needs a running xdg-desktop-portal, which isn't present
# here; GTK3 is. On Windows/macOS this resolves to the native dialog.
rfd = { version = "0.15", default-features = false, features = ["gtk3"] }

# Utilities
anyhow = "1.0"
log = "0.4"
fern = "0.6"
chrono = { version = "0.4", features = ["clock"] }

# Plugin editor window — raw X11 on Linux, raw Win32 on Windows.
[target.'cfg(target_os = "linux")'.dependencies]
x11-dl = "2.21"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi", "windef", "minwindef"] }

[dev-dependencies]
tempfile = "3"
